-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 21, 22
-
Component/s: hotspot
-
b07
-
s390x
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8331397 | 21.0.4 | Amit Kumar | P4 | Resolved | Fixed | b01 |
Recently TestSigInfoInHsErrFile.java started failing on s390x architecture. It checks for a regex pattern:
patterns.add(Pattern.compile("siginfo: si_signo: \\d+ \\(SIGSEGV\\), si_code: \\d+ \\(SEGV_.*\\), si_addr: " + crashAddress + ".*"));
But the string is: siginfo: si_signo: 11 (SIGSEGV), si_code: 1 (SEGV_MAPERR), si_addr: 0x0000000000000000
si_addr is not matching with regex required si_addr format.
patterns.add(Pattern.compile("siginfo: si_signo: \\d+ \\(SIGSEGV\\), si_code: \\d+ \\(SEGV_.*\\), si_addr: " + crashAddress + ".*"));
But the string is: siginfo: si_signo: 11 (SIGSEGV), si_code: 1 (SEGV_MAPERR), si_addr: 0x0000000000000000
si_addr is not matching with regex required si_addr format.
- backported by
-
JDK-8331397 [s390x] TestSigInfoInHsErrFile.java Failure
-
- Resolved
-